Overflow corrected

--- a/css/style1.css
+++ b/css/style1.css
@@ -5,11 +5,12 @@
 --------------------------------------------------------------*/
 html {
 	overflow-x: hidden;
+	background-color: #000;
 }
 
 body {
 	overflow-x: hidden;
-
+	background-color: #000;
 	position: relative;
 }
 
